# product_img_bd

./: .env.example  .gitignore  AGENTS.md  OpenAI API Developer Docs：Create image.md  OpenAI API Developer Docs：Edit image.md  README.md  plan.md  pyproject.toml
.trellis/spec/backend/: ai-sdk-integration.md  authentication.md  database.md  directory-structure.md  index.md  logging.md  orpc-usage.md  performance.md  quality.md  type-safety.md
.trellis/spec/frontend/: ai-sdk-integration.md  api-integration.md  authentication.md  components.md  css-layout.md  directory-structure.md  hooks.md  index.md  orpc-usage.md  quality.md  state-management.md  type-safety.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/05-26-backend-api-scaffold/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/workspace/czz/: index.md  journal-1.md
app/: main.py
app/api/: deps.py
app/cache/: redis.py
app/core/: config.py  security.py
app/db/: mysql.py
app/schemas/: auth.py  common.py  gallery.py  generation.py  session.py  template.py  upload.py
app/services/: auth_service.py  clock.py  gallery_service.py  generation_queue.py  generation_service.py  image_storage.py  langchain_service.py  model_registry.py  repository.py  session_service.py  template_service.py  token_store.py  upload_service.py
app/watchers/: image_directory_watcher.py
tests/: conftest.py  test_auth.py  test_encoding.py  test_gallery.py  test_generation.py  test_generation_providers.py  test_health.py  test_image_storage.py  test_sessions.py  test_templates.py  test_uploads.py
(+18 files in other folders)
